--- a/MealTracker/Base.lproj/Main.storyboard
+++ b/MealTracker/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Uz6-ZR-ttK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wNn-5h-o9z">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -7,7 +7,7 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Meal Table View Controller-->
+        <!--Your Meals-->
         <scene sceneID="bhl-uc-Lfr">
             <objects>
                 <tableViewController id="Uz6-ZR-ttK" customClass="MealTableViewController" customModule="MealTracker" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,7 +17,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="MealTableViewCell" rowHeight="90" id="Go0-pp-KwH" customClass="MealTableViewCell" customModule="MealTracker" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="600" height="90"/>
+                                <rect key="frame" x="0.0" y="92" width="600" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Go0-pp-KwH" id="AWi-u6-tnq">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="89.5"/>
@@ -59,15 +59,22 @@
                             <outlet property="delegate" destination="Uz6-ZR-ttK" id="nzh-Of-KqH"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="Your Meals" id="9lG-0K-Iiv">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="iSj-53-iIW">
+                            <connections>
+                                <segue destination="Wa1-YS-YG4" kind="presentation" identifier="AddItem" id="rzb-q8-S5S"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v66-4S-eoS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-473" y="339"/>
+            <point key="canvasLocation" x="339" y="339"/>
         </scene>
-        <!--View Controller-->
+        <!--New Meal-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MealTracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MealViewController" customModule="MealTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -77,7 +84,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="23C-VL-ceJ">
-                                <rect key="frame" x="20" y="28" width="560" height="451"/>
+                                <rect key="frame" x="13" y="64" width="560" height="451"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="美食名称" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e0I-y1-i3D">
                                         <rect key="frame" x="246" y="0.0" width="68" height="21"/>
@@ -113,26 +120,76 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="23C-VL-ceJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="60" id="btv-ua-oP6"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="23C-VL-ceJ" secondAttribute="trailing" id="sbu-rt-IFf"/>
-                            <constraint firstItem="23C-VL-ceJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="w1K-NB-zaK"/>
+                            <constraint firstItem="23C-VL-ceJ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="btv-ua-oP6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="23C-VL-ceJ" secondAttribute="trailing" constant="7" id="sbu-rt-IFf"/>
+                            <constraint firstItem="23C-VL-ceJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-7" id="w1K-NB-zaK"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="New Meal" id="RRu-rz-en1">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="rPm-34-whg">
+                            <connections>
+                                <action selector="cancel:" destination="BYZ-38-t0r" id="BMP-es-jjC"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Ods-ug-aSK">
+                            <connections>
+                                <segue destination="lbn-0U-fji" kind="unwind" unwindAction="unwindToMealList:" id="ZTP-Sx-bOe"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="mealNameLabel" destination="e0I-y1-i3D" id="Sma-Ad-dgm"/>
                         <outlet property="nameTextField" destination="Mj1-oF-WSG" id="hf2-oc-Uok"/>
                         <outlet property="photoImageView" destination="pCd-hn-nYf" id="bNN-JT-I6Q"/>
                         <outlet property="ratingControl" destination="mWF-Ap-6Vn" id="XQQ-Pc-7Ae"/>
+                        <outlet property="saveButton" destination="Ods-ug-aSK" id="dr3-kN-r1n"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <exit id="lbn-0U-fji" userLabel="Exit" sceneMemberID="exit"/>
                 <tapGestureRecognizer id="58e-oS-WVN">
                     <connections>
                         <action selector="selectImageFromPhotoLibrary:" destination="BYZ-38-t0r" id="VXP-My-Dqv"/>
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="225" y="339"/>
+            <point key="canvasLocation" x="1849" y="339"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="2CI-To-zBQ">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wNn-5h-o9z" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="sTk-tR-tKT">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Uz6-ZR-ttK" kind="relationship" relationship="rootViewController" id="slA-Xf-dsE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UH8-gT-f6e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-473" y="339"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="HIP-RJ-AfN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Wa1-YS-YG4" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7oe-Fr-UMm">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="JgX-jK-Ihm"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Id-kQ-f2p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1037" y="339"/>
         </scene>
     </scenes>
     <resources>
